# ralph-agent-orchestrator

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
docs/: ralph-concerns.md  ralph-future-features.md  ralph-mvp-implementation-plan.md  ralph-orchestrator-design.md  ralph-phase-b-implementation-plan.md  ralph-phase-b-replan.md  ralph-phase-b-status.md
ralph/: __main__.py
ralph/agents/: runner.py
ralph/cli/: main.py
ralph/config/: loader.py  schema.py
ralph/core/: evaluator.py  orchestrator.py  planner.py  router.py  task_graph.py
ralph/llm/: ollama_client.py
ralph/memory/: journal.py  state.py
ralph/skills/: registry.py
tests/: conftest.py  test_agent_runner.py  test_cli.py  test_config.py  test_evaluator.py  test_journal.py  test_ollama_client.py  test_orchestrator.py  test_planner.py  test_router.py  test_run_integration.py  test_skill_registry.py  test_state_manager.py  test_task_graph.py
